recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:15: error: not found: value snowside
  snowside(levels-1,length*(levels-1))
  ^Koch:17: error: not found: value snowside
   snowside(levels-2,length*(levels-2))
   ^Koch:19: error: not found: value snowside
  snowside(levels-3,length*(levels-3))
  ^Koch:21: error: not found: value snowside
  snowside(levels-4,length*(levels-4))
  ^