recursion.logo.koch.Koch.scala.code
def snowFlake (levels:Int, length:Double) {
    snowSide(levels, length);
    right(120);
    setColor(Color.blue);
    snowSide(levels, length);
    right(120);
    setColor(Color.orange);
    snowSide(levels, length);
    right(120);
}
def snowSide(levels:Int, length:Double) {
  if(levels==0)
  	avance(length)
  
  snowside(levels-1,length*(levels-1))
  gauche(60)
 	snowside(levels-2,length*(levels-2))
  gauche(120)
  snowside(levels-3,length*(levels-3))
  gauche(60)
  snowside(levels-4,length*(levels-4))
}